--- a/docs/docs-ref-autogen/visio/visio.datarefreshcompleteeventargs.yml
+++ b/docs/docs-ref-autogen/visio/visio.datarefreshcompleteeventargs.yml
@@ -2,9 +2,9 @@
 items:
   - uid: visio.Visio.DataRefreshCompleteEventArgs
     summary: |-
-      <span data-ttu-id="6feb7-101">提供有关引发了 DataRefreshComplete 事件的文档的信息。</span><span class="sxs-lookup"><span data-stu-id="6feb7-101">Provides information about the document that raised the DataRefreshComplete event.</span></span>
+      <span data-ttu-id="7f243-101">提供有关引发了 DataRefreshComplete 事件的文档的信息。</span><span class="sxs-lookup"><span data-stu-id="7f243-101">Provides information about the document that raised the DataRefreshComplete event.</span></span>
 
-      <span data-ttu-id="6feb7-102">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="6feb7-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      <span data-ttu-id="7f243-102">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="7f243-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
     name: Visio.DataRefreshCompleteEventArgs
     fullName: Visio.DataRefreshCompleteEventArgs
     langs:
@@ -14,11 +14,11 @@ items:
     remarks: |-
 
 
-      #### <a name="examples"></a><span data-ttu-id="6feb7-103">示例</span><span class="sxs-lookup"><span data-stu-id="6feb7-103">Examples</span></span>
+      #### <a name="examples"></a><span data-ttu-id="7f243-103">示例</span><span class="sxs-lookup"><span data-stu-id="7f243-103">Examples</span></span>
 
       ```javascript
       Visio.run(session, function (ctx) {
-          var document1= ctx.document;
+          var document1 = ctx.document;
           eventResult1 = document1.onDataRefreshComplete.add(
               function (args){
                   console.log("Data Refresh Result: "+args.success);
@@ -39,9 +39,9 @@ items:
       - visio.Visio.DataRefreshCompleteEventArgs.success
   - uid: visio.Visio.DataRefreshCompleteEventArgs.document
     summary: |-
-      <span data-ttu-id="6feb7-104">获取有关引发了 DataRefreshComplete 事件的 Document 对象。</span><span class="sxs-lookup"><span data-stu-id="6feb7-104">Gets the document object that raised the DataRefreshComplete event.</span></span>
+      <span data-ttu-id="7f243-104">获取有关引发了 DataRefreshComplete 事件的 Document 对象。</span><span class="sxs-lookup"><span data-stu-id="7f243-104">Gets the document object that raised the DataRefreshComplete event.</span></span>
 
-      <span data-ttu-id="6feb7-105">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="6feb7-105">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      <span data-ttu-id="7f243-105">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="7f243-105">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
     name: document
     fullName: document
     langs:
@@ -54,9 +54,9 @@ items:
           - Visio.Document
   - uid: visio.Visio.DataRefreshCompleteEventArgs.success
     summary: |-
-      <span data-ttu-id="6feb7-106">获取 DataRefreshComplete 事件的成功或失败。</span><span class="sxs-lookup"><span data-stu-id="6feb7-106">Gets the success or failure of the DataRefreshComplete event.</span></span>
+      <span data-ttu-id="7f243-106">获取 DataRefreshComplete 事件的成功或失败。</span><span class="sxs-lookup"><span data-stu-id="7f243-106">Gets the success or failure of the DataRefreshComplete event.</span></span>
 
-      <span data-ttu-id="6feb7-107">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="6feb7-107">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      <span data-ttu-id="7f243-107">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="7f243-107">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
     name: success
     fullName: success
     langs:
