--- a/docs/docs-ref-autogen/outlook_1_5/outlook/office.diagnostics.yml
+++ b/docs/docs-ref-autogen/outlook_1_5/outlook/office.diagnostics.yml
@@ -2,13 +2,13 @@
 items:
   - uid: Outlook.Office.Diagnostics
     summary: |-
-      <span data-ttu-id="6ea58-101">将诊断信息提供给 Outlook 外接程序。</span><span class="sxs-lookup"><span data-stu-id="6ea58-101">Provides diagnostic information to an Outlook add-in.</span></span>
+      <span data-ttu-id="ebed9-101">将诊断信息提供给 Outlook 外接程序。</span><span class="sxs-lookup"><span data-stu-id="ebed9-101">Provides diagnostic information to an Outlook add-in.</span></span>
 
-      <span data-ttu-id="6ea58-102">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ea58-102">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ebed9-102">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ebed9-102">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
     remarks: |-
-      <span data-ttu-id="6ea58-103">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span><span class="sxs-lookup"><span data-stu-id="6ea58-103">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
+      <span data-ttu-id="ebed9-103">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span><span class="sxs-lookup"><span data-stu-id="ebed9-103">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
 
-      <span data-ttu-id="6ea58-104">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="6ea58-104">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
+      <span data-ttu-id="ebed9-104">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="ebed9-104">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
     name: Office.Diagnostics
     fullName: Office.Diagnostics
     langs:
@@ -21,15 +21,15 @@ items:
       - Outlook.Office.Diagnostics.OWAView
   - uid: Outlook.Office.Diagnostics.hostName
     summary: |-
-      <span data-ttu-id="6ea58-105">获取表示主机应用程序的名称的字符串。</span><span class="sxs-lookup"><span data-stu-id="6ea58-105">Gets a string that represents the name of the host application.</span></span>
+      <span data-ttu-id="ebed9-105">获取表示主机应用程序的名称的字符串。</span><span class="sxs-lookup"><span data-stu-id="ebed9-105">Gets a string that represents the name of the host application.</span></span>
 
-      <span data-ttu-id="6ea58-106">可以是下列值之一的字符串: Outlook、Mac Outlook、OutlookIOS 或 OutlookWebApp。</span><span class="sxs-lookup"><span data-stu-id="6ea58-106">A string that can be one of the following values: Outlook, Mac Outlook, OutlookIOS, or OutlookWebApp.</span></span>
+      <span data-ttu-id="ebed9-106">可以是下列值之一的字符串: "Outlook"、"OutlookIOS" 或 "OutlookWebApp"。</span><span class="sxs-lookup"><span data-stu-id="ebed9-106">A string that can be one of the following values: "Outlook", "OutlookIOS", or "OutlookWebApp".</span></span>
 
-      <span data-ttu-id="6ea58-107">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ea58-107">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ebed9-107">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ebed9-107">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
     remarks: |-
-      <span data-ttu-id="6ea58-108">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span><span class="sxs-lookup"><span data-stu-id="6ea58-108">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
+      <span data-ttu-id="ebed9-108">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span><span class="sxs-lookup"><span data-stu-id="ebed9-108">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
 
-      <span data-ttu-id="6ea58-109">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="6ea58-109">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
+      <span data-ttu-id="ebed9-109">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="ebed9-109">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
     name: hostName
     fullName: hostName
     langs:
@@ -42,15 +42,15 @@ items:
           - string
   - uid: Outlook.Office.Diagnostics.hostVersion
     summary: |-
-      <span data-ttu-id="6ea58-110">获取表示主机应用程序或 Exchange Server 的版本的字符串。</span><span class="sxs-lookup"><span data-stu-id="6ea58-110">Gets a string that represents the version of either the host application or the Exchange Server.</span></span>
+      <span data-ttu-id="ebed9-110">获取表示主机应用程序或 Exchange Server 的版本的字符串。</span><span class="sxs-lookup"><span data-stu-id="ebed9-110">Gets a string that represents the version of either the host application or the Exchange Server.</span></span>
 
-      <span data-ttu-id="6ea58-111">如果邮件外接程序在桌面或 iOS 上的 Outlook 客户端中运行, 则 Diagnostics.hostversion 属性将返回主机应用程序 (Outlook) 的版本。</span><span class="sxs-lookup"><span data-stu-id="6ea58-111">If the mail add-in is running in Outlook client on the desktop or iOS, the hostVersion property returns the version of the host application, Outlook.</span></span> <span data-ttu-id="6ea58-112">在 Outlook 网页版中, 该属性返回的是 Exchange 服务器的版本。</span><span class="sxs-lookup"><span data-stu-id="6ea58-112">In Outlook on the web, the property returns the version of the Exchange Server.</span></span> <span data-ttu-id="6ea58-113">例如, 字符串15.0.468.0。</span><span class="sxs-lookup"><span data-stu-id="6ea58-113">An example is the string 15.0.468.0.</span></span>
+      <span data-ttu-id="ebed9-111">如果邮件外接程序在桌面或 iOS 上的 Outlook 客户端中运行, 则 Diagnostics.hostversion 属性将返回主机应用程序 (Outlook) 的版本。</span><span class="sxs-lookup"><span data-stu-id="ebed9-111">If the mail add-in is running in Outlook client on the desktop or iOS, the hostVersion property returns the version of the host application, Outlook.</span></span> <span data-ttu-id="ebed9-112">在 Outlook 网页版中, 该属性返回的是 Exchange 服务器的版本。</span><span class="sxs-lookup"><span data-stu-id="ebed9-112">In Outlook on the web, the property returns the version of the Exchange Server.</span></span> <span data-ttu-id="ebed9-113">一个示例是字符串 "15.0.468.0"。</span><span class="sxs-lookup"><span data-stu-id="ebed9-113">An example is the string "15.0.468.0".</span></span>
 
-      <span data-ttu-id="6ea58-114">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ea58-114">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ebed9-114">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ebed9-114">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
     remarks: |-
-      <span data-ttu-id="6ea58-115">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span><span class="sxs-lookup"><span data-stu-id="6ea58-115">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
+      <span data-ttu-id="ebed9-115">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span><span class="sxs-lookup"><span data-stu-id="ebed9-115">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
 
-      <span data-ttu-id="6ea58-116">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="6ea58-116">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
+      <span data-ttu-id="ebed9-116">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="ebed9-116">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
     name: hostVersion
     fullName: hostVersion
     langs:
@@ -63,25 +63,25 @@ items:
           - string
   - uid: Outlook.Office.Diagnostics.OWAView
     summary: |-
-      <span data-ttu-id="6ea58-117">获取表示 web 上的 Outlook 的当前视图的字符串。</span><span class="sxs-lookup"><span data-stu-id="6ea58-117">Gets a string that represents the current view of Outlook on the web.</span></span>
+      <span data-ttu-id="ebed9-117">获取表示 web 上的 Outlook 的当前视图的字符串。</span><span class="sxs-lookup"><span data-stu-id="ebed9-117">Gets a string that represents the current view of Outlook on the web.</span></span>
 
-      <span data-ttu-id="6ea58-118">返回的字符串可以是下列值之一: OneColumn、TwoColumns 或 ThreeColumns。</span><span class="sxs-lookup"><span data-stu-id="6ea58-118">The returned string can be one of the following values: OneColumn, TwoColumns, or ThreeColumns.</span></span>
+      <span data-ttu-id="ebed9-118">返回的字符串可以是下列值之一: "OneColumn"、"TwoColumns" 或 "ThreeColumns"。</span><span class="sxs-lookup"><span data-stu-id="ebed9-118">The returned string can be one of the following values: "OneColumn", "TwoColumns", or "ThreeColumns".</span></span>
 
-      <span data-ttu-id="6ea58-119">如果主机应用程序不是 web 上的 Outlook, 则访问此属性将导致未定义。</span><span class="sxs-lookup"><span data-stu-id="6ea58-119">If the host application is not Outlook on the web, then accessing this property results in undefined.</span></span>
+      <span data-ttu-id="ebed9-119">如果主机应用程序不是 web 上的 Outlook, 则访问此属性将导致未定义。</span><span class="sxs-lookup"><span data-stu-id="ebed9-119">If the host application is not Outlook on the web, then accessing this property results in undefined.</span></span>
 
-      <span data-ttu-id="6ea58-120">Web 上的 Outlook 具有三个视图, 分别对应于屏幕的宽度和窗口, 以及可以显示的列数:</span><span class="sxs-lookup"><span data-stu-id="6ea58-120">Outlook on the web has three views that correspond to the width of the screen and the window, and the number of columns that can be displayed:</span></span>
+      <span data-ttu-id="ebed9-120">Web 上的 Outlook 具有三个视图, 分别对应于屏幕的宽度和窗口, 以及可以显示的列数:</span><span class="sxs-lookup"><span data-stu-id="ebed9-120">Outlook on the web has three views that correspond to the width of the screen and the window, and the number of columns that can be displayed:</span></span>
 
-      - <span data-ttu-id="6ea58-121">OneColumn, 当屏幕缩小时显示。</span><span class="sxs-lookup"><span data-stu-id="6ea58-121">OneColumn, which is displayed when the screen is narrow.</span></span> <span data-ttu-id="6ea58-122">Web 上的 Outlook 在智能手机的整个屏幕上使用此单列布局。</span><span class="sxs-lookup"><span data-stu-id="6ea58-122">Outlook on the web uses this single-column layout on the entire screen of a smartphone.</span></span>
+      - <span data-ttu-id="ebed9-121">当屏幕缩小时显示的 "OneColumn"。</span><span class="sxs-lookup"><span data-stu-id="ebed9-121">"OneColumn", which is displayed when the screen is narrow.</span></span> <span data-ttu-id="ebed9-122">Web 上的 Outlook 在智能手机的整个屏幕上使用此单列布局。</span><span class="sxs-lookup"><span data-stu-id="ebed9-122">Outlook on the web uses this single-column layout on the entire screen of a smartphone.</span></span>
 
-      - <span data-ttu-id="6ea58-123">TwoColumns, 当屏幕变宽时显示。</span><span class="sxs-lookup"><span data-stu-id="6ea58-123">TwoColumns, which is displayed when the screen is wider.</span></span> <span data-ttu-id="6ea58-124">Outlook 网页版在大多数平板电脑上使用此视图。</span><span class="sxs-lookup"><span data-stu-id="6ea58-124">Outlook on the web uses this view on most tablets.</span></span>
+      - <span data-ttu-id="ebed9-123">当屏幕变宽时显示的 "TwoColumns"。</span><span class="sxs-lookup"><span data-stu-id="ebed9-123">"TwoColumns", which is displayed when the screen is wider.</span></span> <span data-ttu-id="ebed9-124">Outlook 网页版在大多数平板电脑上使用此视图。</span><span class="sxs-lookup"><span data-stu-id="ebed9-124">Outlook on the web uses this view on most tablets.</span></span>
 
-      - <span data-ttu-id="6ea58-125">ThreeColumns, 在屏幕宽度时显示。</span><span class="sxs-lookup"><span data-stu-id="6ea58-125">ThreeColumns, which is displayed when the screen is wide.</span></span> <span data-ttu-id="6ea58-126">例如, web 上的 Outlook 在桌面计算机上的全屏窗口中使用此视图。</span><span class="sxs-lookup"><span data-stu-id="6ea58-126">For example, Outlook on the web uses this view in a full screen window on a desktop computer.</span></span>
+      - <span data-ttu-id="ebed9-125">"ThreeColumns", 在屏幕宽度时显示。</span><span class="sxs-lookup"><span data-stu-id="ebed9-125">"ThreeColumns", which is displayed when the screen is wide.</span></span> <span data-ttu-id="ebed9-126">例如, web 上的 Outlook 在桌面计算机上的全屏窗口中使用此视图。</span><span class="sxs-lookup"><span data-stu-id="ebed9-126">For example, Outlook on the web uses this view in a full screen window on a desktop computer.</span></span>
 
-      <span data-ttu-id="6ea58-127">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ea58-127">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ebed9-127">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ebed9-127">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
     remarks: |-
-      <span data-ttu-id="6ea58-128">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span><span class="sxs-lookup"><span data-stu-id="6ea58-128">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
+      <span data-ttu-id="ebed9-128">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span><span class="sxs-lookup"><span data-stu-id="ebed9-128">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
 
-      <span data-ttu-id="6ea58-129">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="6ea58-129">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
+      <span data-ttu-id="ebed9-129">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="ebed9-129">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
     name: OWAView
     fullName: OWAView
     langs:
